syntax = "proto3";

package deploy.v1;

import "google/type/datetime.proto";
import "validate/validate.proto";

message Deploy {
  string id = 1;
  string install_id = 2;
  string build_id = 3;

  google.type.DateTime updated_at = 7;
  google.type.DateTime created_at = 8;
}

message StartDeployRequest {
  string build_id = 1 [(validate.rules).string.len = 26];
  string install_id = 2 [(validate.rules).string.len = 26];
  string component_id = 3 [(validate.rules).string.len = 26];
}

message StartDeployResponse {
  Deploy deploy = 1;
}

message GetDeployRequest {
  string id = 1 [(validate.rules).string.len = 26];
}

message GetDeployResponse {
  Deploy deploy = 1;
}
